--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
             <div class="item"></div>
         </div>
         <div class="ct">
-            <div class="item"><a href="/pages/vi/lai-suat-vay.html" target="_blank">Lãi Suất Tiền Gửi</a></div>
+            <div class="item"><a href="/shinhanbank/pages/vi/lai-suat-vay.html" target="_blank">Lãi Suất Tiền Gửi</a></div>
             <div class="item"><a href="https://shinhan.com.vn/vi/page/mau-don.html">Mẫu Đơn</a></div>
-            <div class="item"><a href="/pages/vi/loan_calculator.html" target="_blank">Tính khoản vay</a></div>
+            <div class="item"><a href="/shinhanbank/pages/vi/loan_calculator.html" target="_blank">Tính khoản vay</a></div>
         </div>
     </div>
     <div class="quick-access-mobile">
@@ -419,7 +419,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class=" "><a href="/pages/vi/chuyen-tien.html">Chuyển Tiền</a></li>
+                        <li class=" "><a href="/shinhanbank/pages/vi/chuyen-tien.html">Chuyển Tiền</a></li>
                     </ul>
                     <div class="bottom-nav">
                         <div class="li-w"><a href="/shinhanbank/pages/vi/chi-nhanh-gan-nhat.html" class="a-text">Điểm Giao Dịch, ATM & STM</a></div>
