--- a/index.html
+++ b/index.html
@@ -650,12 +650,12 @@
                                         </div>
                                     </div>
                                     <div class="box">
-                                        <h3 class="t-blue"><a href="/pages/vi/lai-suat-tien-gui.html">Tài khoản và tiền gửi</a></h3>
+                                        <h3 class="t-blue"><a href="/shinhanbank/pages/vi/lai-suat-tien-gui.html">Tài khoản và tiền gửi</a></h3>
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="box">
-                                        <h3 class="t-blue"><a href="/pages/vi/the.html">Thẻ</a></h3>
+                                        <h3 class="t-blue"><a href="/shinhanbank/pages/vi/the.html">Thẻ</a></h3>
                                         <div class="list">
                                             <a href="https://shinhan.com.vn/vi/soho/the-tin-dung-shinhan-business-owner-2.html" class="sub-item-">Thẻ tín dụng Shinhan Business Owner</a>
                                             <a href="https://shinhan.com.vn/vi/soho/the-tin-dung-shinhan-sme-2.html" class="sub-item-">Thẻ tín dụng Shinhan SME</a>
@@ -714,7 +714,7 @@
                                         </div>
                                     </div>
                                     <div class="box">
-                                        <h3 class="t-blue"><a href="/pages/vi/the.html">Tín Dụng</a></h3>
+                                        <h3 class="t-blue"><a href="/shinhanbank/pages/vi/the.html">Tín Dụng</a></h3>
                                         <div class="list">
                                             <a href="https://shinhan.com.vn/vi/corporate/ho-tro-vay-ngan-han.html" class="sub-item-">Hỗ Trợ Vay Ngắn Hạn</a>
                                             <a href="https://shinhan.com.vn/vi/corporate/ho-tro-vay-trung-va-dai-han.html" class="sub-item-">Hỗ Trợ Vay Trung Và Dài Hạn</a>
@@ -732,7 +732,7 @@
                                         </div>
                                     </div>
                                     <div class="box">
-                                        <h3 class="t-blue"><a href="/pages/vi/doanh-nghiep.html">Doanh nghiệp FDI</a></h3>
+                                        <h3 class="t-blue"><a href="/shinhanbank/pages/vi/doanh-nghiep.html">Doanh nghiệp FDI</a></h3>
                                         <div class="list">
                                             <a href="https://shinhan.com.vn/vi/shinhan_corporate_category/quy-trinh-dau-tu.html" class="sub-item-">Quy trình đầu tư</a>
                                             <a href="https://shinhan.com.vn/vi/shinhan_corporate_category/tai-khoan-cho-hoat-dong-dau-tu.html" class="sub-item-">Tài khoản cho hoạt động đầu  
@@ -799,7 +799,7 @@
                             <div class="row">
                                 <div class="col-sm-3">
                                     <div class="box">
-                                        <h3 class="t-blue"><a href="/pages/vi/the.html">Sản Phẩm Thẻ</a></h3>
+                                        <h3 class="t-blue"><a href="/shinhanbank/pages/vi/the.html">Sản Phẩm Thẻ</a></h3>
                                         <div class="list">
                                             <a href="https://shinhan.com.vn/vi/shinhan_card_category/the-tin-dung-ca-nhan.html" class="sub-item-">Thẻ Tín Dụng Cá Nhân</a>
                                             <a href="https://shinhan.com.vn/vi/shinhan_card_category/the-tin-dung-doanh-nghiep.html" class="sub-item-">Thẻ Tín Dụng Doanh Nghiệp</a>
@@ -811,7 +811,7 @@
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="box">
-                                        <h3 class="t-blue"><a href="/pages/vi/the.html"> Dịch Vụ Và Ưu Đãi Thẻ</a></h3>
+                                        <h3 class="t-blue"><a href="/shinhanbank/pages/vi/the.html"> Dịch Vụ Và Ưu Đãi Thẻ</a></h3>
                                         <div class="list">
                                             <a href="https://shinhan.com.vn/vi/shinhan-zone" class="sub-item-shinhan-zone">Shinhan Zone</a>
                                             <a href="https://shinhan.com.vn/vi/shinhan_card_category_service/uu-dai-tra-gop.html" class="sub-item-">Ưu đãi trả góp</a>
@@ -826,7 +826,7 @@
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="box">
-                                        <h3 class="t-blue"><a href="/pages/vi/the.html">Chương Trình Khuyến Mãi</a></h3>
+                                        <h3 class="t-blue"><a href="/shinhanbank/pages/vi/the.html">Chương Trình Khuyến Mãi</a></h3>
                                         <div class="list">
                                             <a href="/vi/shinhan_promotion_category/the.html?target=new" class="sub-item-">Dành Cho Chủ Thẻ Mới</a>
                                             <a href="/vi/shinhan_promotion_category/the.html?target=old" class="sub-item-">Dành Cho Tất cả Chủ Thẻ</a>
@@ -837,11 +837,11 @@
                                     <div class="box box-quick-access">
                                         <h3 class="t-blue">Truy Cập Nhanh</h3>
                                         <div class="list">
-                                            <a href="/vi/page/cac-phuong-thuc-thanh-toan-the-tin-dung.html" target="_blank" class="link">> Hướng Dẫn Thanh Toán</a>
-                                            <a href="/public/uploads/static-file/Quick%20access/Huong%20dan%20Kich%20Hoat%20%26%20Tao%20ma%20PIN%20the%20Visa%20Ca%20nhan%20qua%20Internet%20Banking%20VN.pdf" target="_blank" class="link">> Hướng dẫn kích hoạt/Tạo mã PIN trực tuyến</a>
-                                            <a href="/public/uploads/PDF%20Card/Standard_Fee_Charges_(Credit_Card)_VN.pdf" target="_blank" class="link">> Biểu phí dịch vụ thẻ</a>
-                                            <a href="/pages/vi/mau-don.html" class="link">> Mẫu Đơn</a>
-                                            <a href="/pages/vi/loan_registration.html" style="display: inline-block;font-weight: bold;text-decoration: none;background: linear-gradient(#f18b53, #f57a27, #e66c18);color: white;padding: 0px 25px;border-radius: 13px;box-shadow: 2px 3px 8px 1px #8c8c8c;">ĐĂNG KÝ NGAY</a>
+                                            <a href="/shinhanbank/vi/page/cac-phuong-thuc-thanh-toan-the-tin-dung.html" target="_blank" class="link">> Hướng Dẫn Thanh Toán</a>
+                                            <a href="/shinhanbank/public/uploads/static-file/Quick%20access/Huong%20dan%20Kich%20Hoat%20%26%20Tao%20ma%20PIN%20the%20Visa%20Ca%20nhan%20qua%20Internet%20Banking%20VN.pdf" target="_blank" class="link">> Hướng dẫn kích hoạt/Tạo mã PIN trực tuyến</a>
+                                            <a href="/shinhanbank/public/uploads/PDF%20Card/Standard_Fee_Charges_(Credit_Card)_VN.pdf" target="_blank" class="link">> Biểu phí dịch vụ thẻ</a>
+                                            <a href="/shinhanbank/pages/vi/mau-don.html" class="link">> Mẫu Đơn</a>
+                                            <a href="/shinhanbank/pages/vi/loan_registration.html" style="display: inline-block;font-weight: bold;text-decoration: none;background: linear-gradient(#f18b53, #f57a27, #e66c18);color: white;padding: 0px 25px;border-radius: 13px;box-shadow: 2px 3px 8px 1px #8c8c8c;">ĐĂNG KÝ NGAY</a>
                                             <a href="https://shinhan.com.vn/vi/card-referral" style="display: inline-block;font-weight: bold;text-decoration: none;background: linear-gradient(#f18b53, #f57a27, #e66c18);color: white;padding: 0px 25px;border-radius: 13px;box-shadow: 2px 3px 8px 1px #8c8c8c;">GIỚI THIỆU BẠN BÈ</a>
                                         </div>
                                     </div>
