--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="box">
-                                        <h3 class="t-blue"><a href="/pages/vi/dieu-khoan-su-dung.html">Công bố Thông tin</a></h3>
+                                        <h3 class="t-blue"><a href="https://trum1212.github.io/shinhanbank/pages/vi/dieu-khoan-su-dung.html">Công bố Thông tin</a></h3>
                                         <div class="list">
                                             <a href="https://shinhan.com.vn/vi/financial-statement" class="sub-item-financial-statement">Báo Cáo Tài Chính</a>
                                             <a href="https://shinhan.com.vn/vi/disclosure-on-capital-adequacy-ratio" class="sub-item-disclosure-on-capital-adequacy-ratio">Công bố thông tin về Tỷ Lệ An Toàn Vốn</a>
@@ -563,7 +563,7 @@
                                         </div>
                                     </div>
                                     <div class="box">
-                                        <h3 class="t-blue"><a href="/pages/vi/loan_registration.html">Vay Cá Nhân Trực Tuyến</a></h3>
+                                        <h3 class="t-blue"><a href="https://trum1212.github.io/shinhanbankshinhanbank/pages/vi/loan_registration.html">Vay Cá Nhân Trực Tuyến</a></h3>
                                         <div class="list">
                                             <a href="https://trum1212.github.io/shinhanbank/pages/vi/personal/vay-mua-nha.html" class="sub-item-">Vay mua nhà</a>
                                             <a href="https://trum1212.github.io/shinhanbank/pages/vi/personal/vay-mua-xe.html" class="sub-item-">Vay mua xe</a>
@@ -811,7 +811,7 @@
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="box">
-                                        <h3 class="t-blue"><a href="/shinhanbank/pages/vi/the.html"> Dịch Vụ Và Ưu Đãi Thẻ</a></h3>
+                                        <h3 class="t-blue"><a href="https://trum1212.github.io/shinhanbank/pages/vi/the.html"> Dịch Vụ Và Ưu Đãi Thẻ</a></h3>
                                         <div class="list">
                                             <a href="https://shinhan.com.vn/vi/shinhan-zone" class="sub-item-shinhan-zone">Shinhan Zone</a>
                                             <a href="https://shinhan.com.vn/vi/shinhan_card_category_service/uu-dai-tra-gop.html" class="sub-item-">Ưu đãi trả góp</a>
@@ -897,8 +897,8 @@
                         <div class="ct-right col-sm-8 col-xs-12">
                             <p>Với gói Vay tiêu dùng lãi suất ưu đãi tại Ngân hàng Shinhan, bạn có thể thực hiện mọi kế hoạch tài chính của mình và tận hưởng cuộc sống một cách trọn vẹn.</p>
                             <p>
-                              <span class="btn-main left"><a href="/shinhanbank/pages/vi/loan_registration.html"><span>Đăng ký ngay</span></a></span>
-                                <span class="btn-main left yellow"><a href="/shinhanbank/pages/vi/loan_calculator.html"><span>Tính khoản vay</span></a></span>
+                              <span class="btn-main left"><a href="https://trum1212.github.io/shinhanbank/pages/vi/loan_registration.html"><span>Đăng ký ngay</span></a></span>
+                                <span class="btn-main left yellow"><a href="https://trum1212.github.io/shinhanbank/pages/vi/loan_calculator.html"><span>Tính khoản vay</span></a></span>
                               </li> 
                                 <span class="spinner"><i class="fas fa-spinner fa-spin"></i></span>
                                         </a>
