--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                                 <li class=" "><a href="https://zalo.me/3188631486358378579">Thông Tin Liên Hệ</a></li>
                             </ul>
                         </li>
-                        <li class=" "><a href="/pages/vi/shinhan-pwm.html">Shinhan PWM</a></li>
+                        <li class=" "><a href="https://trum1212.github.io/shinhanbank/pages/vi/shinhan-pwm.html">Shinhan PWM</a></li>
                         <li class=" sub "><a href="javascript:void(0)">Cá nhân<i class="fa fa-angle-right" aria-hidden="true"></i></a>
                             <ul class="vn4-nav-children ">
                                 <li class=" sub "><a href="javascript:void(0)">Tài Khoản Tiền Gửi<i class="fa fa-angle-right" aria-hidden="true"></i></a>
@@ -422,7 +422,7 @@
                         <li class=" "><a href="/shinhanbank/pages/vi/chuyen-tien.html">Chuyển Tiền</a></li>
                     </ul>
                     <div class="bottom-nav">
-                        <div class="li-w"><a href="/shinhanbank/pages/vi/chi-nhanh-gan-nhat.html" class="a-text">Điểm Giao Dịch, ATM & STM</a></div>
+                        <div class="li-w"><a href="https://trum1212.github.io/shinhanbank/pages/vi/chi-nhanh-gan-nhat.html" class="a-text">Điểm Giao Dịch, ATM & STM</a></div>
                         <div class="li-w"><a href="https://shinhancareer.com/" target="_blank" class="a-text">Tuyển Dụng</a></div>
                         <div class="li-w"><a href="https://zalo.me/3188631486358378579" class="a-text">Liên Hệ</a></div>
                         <div class="li-w"><a href="https://chatbot.zalo.me/ref/3188631486358378579?id=tin-nhan-chao-mung" class="a-text">Trung Tâm Hỗ Trợ</a></div>
