--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <div class="header-mobile">
             <div class="top-nav">
                 <div class="brand">
-                    <a href="trum1212.github.io/shinhanbank/"><img src="https://shinhan.com.vn/public/themes/shinhan/img/logo-01.svg" alt="Shinhan Bank" width="130px"></a>
+                    <a href="https://trum1212.github.io/shinhanbank/"><img src="https://shinhan.com.vn/public/themes/shinhan/img/logo-01.svg" alt="Shinhan Bank" width="130px"></a>
                 </div>
                 <div class="right">
                     <div class="login">
@@ -419,7 +419,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class=" "><a href="/shinhanbank/pages/vi/chuyen-tien.html">Chuyển Tiền</a></li>
+                        <li class=" "><a href="https://trum1212.github.io/shinhanbank/pages/vi/chuyen-tien.html">Chuyển Tiền</a></li>
                     </ul>
                     <div class="bottom-nav">
                         <div class="li-w"><a href="https://trum1212.github.io/shinhanbank/pages/vi/chi-nhanh-gan-nhat.html" class="a-text">Điểm Giao Dịch, ATM & STM</a></div>
@@ -466,7 +466,7 @@
             <div class="navigation">
                 <div class="container-w">
                     <div class="brand col-md-2">
-                        <a href="trum1212.github.io/shinhanbank/"><img src="https://shinhan.com.vn/public/themes/shinhan/img/logo-01.svg" alt="Shinhan Bank" width="185px"></a>
+                        <a href="https://trum1212.github.io/shinhanbank/"><img src="https://shinhan.com.vn/public/themes/shinhan/img/logo-01.svg" alt="Shinhan Bank" width="185px"></a>
                         <h1 class="hidden">Ngân hàng Shinhan</h1>
                     </div>
                     <div class="menu col-md-10">
