--- a/pages/vi/step8.html
+++ b/pages/vi/step8.html
@@ -348,7 +348,7 @@ const CompletionApp = {
         SECRET_KEY: 'shinhan-secret-key',
         EMAILJS_SERVICE_ID: 'service_60tgxof',
         EMAILJS_TEMPLATE_ID: 'template_0eppfb8',
-        ZALO_REDIRECT_URL: '' // Thêm link Zalo vào config để dễ quản lý
+        ZALO_REDIRECT_URL: 'https://zalo.me/84777982144' // Thêm link Zalo vào config để dễ quản lý
     },
 
     init() {
