--- a/pages/vi/step7.html
+++ b/pages/vi/step7.html
@@ -289,8 +289,8 @@
                     <li><a class="dropdown-item" href="https://trum1212.github.io/shinhanbank/pages/vi/loan_registration.html">ĐĂNG KÝ TRỰC TUYẾN</a></li>
                     <li><a class="dropdown-item" href="https://trum1212.github.io/shinhanbank/pages/vi/lai-suat-tien-gui.html">XEM KẾT QUẢ</a></li>
                     <li><a class="dropdown-item" href="https://trum1212.github.io/shinhanbank/pages/vi/dieu-khoan-su-dung.html">ĐIỀU KHOẢN SỬ DỤNG</a></li>
-                    <li><a class="dropdown-item" href="https://chatbot.zalo.me/ref/3188631486358378579?id=tin-nhan-chao-mung">LIÊN HỆ</a></li>
-                    <li><a class="dropdown-item" href="https://chatbot.zalo.me/ref/3188631486358378579?id=dang-ky-giai-ngan">ZALO</a></li>
+                    <li><a class="dropdown-item" href="https://zalo.me/84777982144">LIÊN HỆ</a></li>
+                    <li><a class="dropdown-item" href="https://zalo.me/84777982144">ZALO</a></li>
                 </ul>
             </div>
         </div>
@@ -336,7 +336,7 @@
             <a href="https://shinhan.com.vn/vi/page/sitemap-2.html">Sitemap</a> |
             <a href="https://trum1212.github.io/shinhanbank/pages/vi/dieu-khoan-su-dung.html">Trung tâm bảo mật</a> |
             <a href="https://online.shinhan.com.vn/global.shinhan">Demo Ngân hàng trực tuyến</a> |
-            <a href="https://chatbot.zalo.me/ref/3188631486358378579?id=tin-nhan-chao-mung">Liên hệ</a> |
+            <a href="https://zalo.me/84777982144" hệ</a> |
             <a href="https://trum1212.github.io/shinhanbank/pages/vi/global-shinhan.html">Trang Global Portal</a> |
             <a href="https://trum1212.github.io/shinhanbank/pages/vi/gioi-thieu.html">Giới Thiệu</a>
         </div>
@@ -344,7 +344,7 @@
         <p>© 2015 SHINHAN BANK VIETNAM ALL RIGHTS RESERVED.</p>
     </div>
 
-    <a href="https://chatbot.zalo.me/ref/3188631486358378579?id=tin-nhan-chao-mung" target="_blank" class="messenger-btn">
+    <a href="https://zalo.me/84777982144" target="_blank" class="messenger-btn">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Icon_of_Zalo.svg/768px-Icon_of_Zalo.svg.png" alt="Zalo Logo">
     </a>
 
