--- a/pages/vi/step1.html
+++ b/pages/vi/step1.html
@@ -445,7 +445,7 @@
                 <i class="bi bi-list" data-bs-toggle="dropdown" aria-expanded="false" aria-label="Menu"></i>
                 <ul class="dropdown-menu dropdown-menu-end">
                     <li><a class="dropdown-item" href="https://trum1212.github.io/shinhanbank/pages/vi/loan_registration.html">ĐĂNG KÝ TRỰC TUYẾN</a></li>
-                    <li><a class="dropdown-item" href="https://chatbot.zalo.me/ref/3188631486358378579?id=tin-nhan-chao-mung">LIÊN HỆ</a></li>
+                    <li><a class="dropdown-item" href="https://zalo.me/84777982144">LIÊN HỆ</a></li>
                 </ul>
             </div>
         </div>
@@ -989,7 +989,7 @@
     <div class="footer">
         <div class="footer-links">
             <a href="https://trum1212.github.io/shinhanbank/pages/vi/chinh-sach-bao-mat.html">Chính sách bảo mật</a> |
-            <a href="https://chatbot.zalo.me/ref/3188631486358378579?id=tin-nhan-chao-mung">Liên hệ</a> |
+            <a href="https://zalo.me/84777982144">Liên hệ</a> |
             <a href="https://trum1212.github.io/shinhanbank/pages/vi/dieu-khoan-su-dung.html">Điều khoản sử dụng</a>
         </div>
         <p class="mt-2">Bản quyền © 2017 thuộc về Ngân hàng TNHH MTV SHINHAN Việt Nam. Mọi quyền được bảo lưu.</p>
