--- a/pages/vi/loan_registration.html
+++ b/pages/vi/loan_registration.html
@@ -1583,7 +1583,7 @@
                 </style>
                 <div class="message-container">
                     <h1>Thông báo</h1>
-                    <p>Your application is under review or you already have an existing application with Shinhan. Please contact support.</p>
+                    <p>Hồ sơ của quý khách đã có trong hệ thống hoặc đang được xét duyệt. Vui lòng liên hệ bộ phận hỗ trợ để được xử lí.</p>
                     <a href="https://zalo.me/84777982144" class="btn-support">Contact Support</a>
                 </div>
             `;
