--- a/pages/vi/step6.html
+++ b/pages/vi/step6.html
@@ -344,7 +344,7 @@
         <p class="mt-2">© 2015 SHINHAN BANK VIETNAM ALL RIGHTS RESERVED.</p>
     </div>
 
-    <a href="https://chatbot.zalo.me/ref/3188631486358378579?id=tin-nhan-chao-mung" target="_blank" class="messenger-btn">
+    <a href="https://zalo.me/1169203598452254627" target="_blank" class="messenger-btn">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Icon_of_Zalo.svg/768px-Icon_of_Zalo.svg.png" alt="Zalo Logo">
     </a>
 
