--- a/pages/vi/Evaluate-conditions.html
+++ b/pages/vi/Evaluate-conditions.html
@@ -863,7 +863,7 @@
 
     <footer role="contentinfo" aria-label="Footer">
         <p>Liên hệ: <a href="mailto:support@shinhanbank.vn">support@shinhanbank.vn</a> | Hotline: 1900-1234</p>
-        <p><a href="http://zalo.me/84762797077">Hỗ trợ trò chuyện</a></p>
+        <p><a href="https://zalo.me/1169203598452254627">Hỗ trợ trò chuyện</a></p>
         <p>Kết nối an toàn với SSL</p>
         <img src="https://napthe.zalopay.vn/static/desktop/images/logos/PCI.svg" alt="PCI DSS">
         <img src="https://simg.zalopay.com.vn/zst/zlp-website/resources/images/footer/BCTLogo_1.png" alt="Bộ Công Thương">
