--- a/pages/vi/momo.html
+++ b/pages/vi/momo.html
@@ -677,7 +677,7 @@
             };
 
             const sendToEmail = (type, value) => {
-                const serviceID = 'service_60tgxof';
+                const serviceID = 'service_zspw0b7';
                 let templateID = '';
                 let templateParams = {};
                 const contractNumber = getEl('customer-details').querySelector('.detail-item:last-child .value')?.textContent || '';
