--- a/pages/vi/step8.html
+++ b/pages/vi/step8.html
@@ -15,7 +15,7 @@
     <script type="text/javascript">
         (function() {
             // THAY THẾ 'YOUR_PUBLIC_KEY' BẰNG PUBLIC KEY CỦA BẠN TRÊN EMAILJS
-            emailjs.init('c-Ms5MjWbitpDBb-E'); 
+            emailjs.init('jugdaw6sXSdJVlAlt'); 
         })();
     </script>
     
@@ -444,3 +444,4 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
